--- a/src/pages/git/git-command.mdx
+++ b/src/pages/git/git-command.mdx
@@ -56,3 +56,4 @@
 - [Git command](https://qiita.com/kozzy/items/b42ba59a8bac190a16ab)
 - [Git Branch](https://www.atlassian.com/git/tutorials/using-branches)
 - [How to Resolve Merge Conflicts in Git?](https://www.simplilearn.com/tutorials/git-tutorial/merge-conflicts-in-git)
+- [Git | 我以為的 Git Rebase 與和 Git Merge 做合併分支的差異](https://medium.com/starbugs/git-我以為的-git-rebase-與和-git-merge-做合併分支的差異-cacd3f45294d)
