--- a/src/pages/JavaScript/object-methods.mdx
+++ b/src/pages/JavaScript/object-methods.mdx
@@ -15,4 +15,4 @@
 ## References
 
 - [JavaScript Object Methods](https://www.w3schools.com/js/js_object_methods.asp)
-- [Object](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object)
+- [MDN Object](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object)
