--- a/src/pages/JavaScript/Methods/array-methods.mdx
+++ b/src/pages/JavaScript/Methods/array-methods.mdx
@@ -256,7 +256,7 @@ console.log(kvArray);
 <details>
   <summary><b>Array filter()：</b>使用 filter 根據指定的條件篩選陣列中的元素。</summary>
 
-```js
+```js filename="找出質數"
 const array = [-3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13];
 
 function isPrime(num) {
@@ -271,6 +271,16 @@ function isPrime(num) {
 console.log(array.filter(isPrime)); // [2, 3, 5, 7, 11, 13]
 ```
 
+```js filename="分類存款、取款"
+const movements = [200, 450, -400, 3000, -650, -130, 70, 1300];
+
+const deposits = movements.filter((mov) => mov > 0);
+console.log(deposits); // [ 200, 450, 3000, 70, 1300 ]
+
+const withdrawals = movements.filter((mov) => mov < 0);
+console.log(withdrawals); // [ -400, -650, -130 ]
+```
+
 </details>
 <details>
   <summary><b>Array reduce()：</b>使用 reduce 對陣列中的所有元素進行累積計算。</summary>
@@ -279,7 +289,7 @@ console.log(array.filter(isPrime)); // [2, 3, 5, 7, 11, 13]
 
 - **callback：** 用於處理陣列中每個元素的函式，可傳入四個參數：
 
-  **1. accumulator：** 用來累積回呼函式回傳值的累加器（accumulator）或 initialValue（若有提供的話，詳如下敘）。累加器是上一次呼叫後，所回傳的累加數值。
+  **1. accumulator：** 用來累積回呼函式回傳值的累加器（accumulator）或 initialValue（若有提供的話，詳如下敘）。累加器是上一次呼叫後，所回傳的累加數值。(like a snow ball)
 
   **2. currentValue：** 原陣列目前所迭代處理中的元素。
 
@@ -301,6 +311,17 @@ const sumWithInitial = array1.reduce(
 
 console.log(sumWithInitial);
 // Expected output: 10
+```
+
+```js filename="帳戶餘額"
+const movements = [200, 450, -400, 3000, -650, -130, 70, 1300];
+
+const balance = movements.reduce((acc, cur, i) => {
+  console.log(`Iteration ${i}: ${acc}`);
+  return acc + cur;
+}, 0);
+
+console.log(balance);
 ```
 
 </details>
