--- a/src/pages/React/react.mdx
+++ b/src/pages/React/react.mdx
@@ -21,3 +21,7 @@ React （也稱為 React.js 或 ReactJS）是一個免費和開源的前端 Java
 - 由於網頁瀏覽器無法理解 JSX 語法，我們需要先做 JSX Transformation。在 React Proiect 內部的 node modules 資料夾內，可以找到一個資料「babel」。
 
 - Babel 是一個 Javascript 編譯器，它可以將不是每個瀏覽器都可以理解的最新 JavaScript 功能轉換為當前和舊瀏覽或環境中向後兼容的 JavaScript 版本。Babel 在 React 的功能在於將 JSX 語法轉換成 React Components。
+
+## References
+
+- [React](https://overreacted.io/)
