--- a/src/pages/JavaScript/Methods/object-methods.mdx
+++ b/src/pages/JavaScript/Methods/object-methods.mdx
@@ -16,3 +16,4 @@
 
 - [JavaScript Object Methods](https://www.w3schools.com/js/js_object_methods.asp)
 - [MDN Object](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object)
+- [JavaScript 之旅 (4)：Object.keys() & Object.values() & Object.entries()](https://ithelp.ithome.com.tw/articles/10239942)
