--- a/src/pages/JavaScript/closure.mdx
+++ b/src/pages/JavaScript/closure.mdx
@@ -165,3 +165,4 @@ A factory function is a function that returns a new object.
 
 - [What is a Closure?](https://kyleshevlin.com/what-is-a-closure/)
 - [What is a Factory Function?](https://kyleshevlin.com/what-is-a-factory-function/)
+- [What is a Closure?](https://kyleshevlin.com/what-is-a-closure/)
