--- a/src/pages/JavaScript/scope&scope-chain.mdx
+++ b/src/pages/JavaScript/scope&scope-chain.mdx
@@ -46,3 +46,7 @@ function find() {
 }
 find();
 ```
+
+## References
+
+- [[JavaScript] Javascript 的作用域 (Scope) 與範圍鏈 (Scope Chain)：往外找](https://medium.com/itsems-frontend/javascript-scope-and-scope-chain-ca17a1068c96)
