--- a/src/pages/TypeScript/typescript.mdx
+++ b/src/pages/TypeScript/typescript.mdx
@@ -124,3 +124,4 @@ export default PersonComponent;
 
 - [TypeScript vs JavaScript: Know The Difference](https://radixweb.com/blog/typescript-vs-javascript)
 - [TypeScript | 聽說 JavaScript 有什麼弱型別？ TypeScript 的基本用法 ( I )](https://medium.com/enjoy-life-enjoy-coding/typescript-聽說-javascript-有什麼弱型別-typescript-的基本用法-i-bb487251d387)
+- [The TSConfig Cheat Sheet](https://www.totaltypescript.com/tsconfig-cheat-sheet)
