--- a/src/pages/Web/HTTP.mdx
+++ b/src/pages/Web/HTTP.mdx
@@ -1,3 +1,4 @@
 ## References
 
 - [[第四週] 網路基礎 - HTTP、Request、Response HTTP 是什麼？](https://yakimhsu.com/project/project_w4_Network_http.html)
+- [https だからというだけで安全？調べたら怖くなってきた SSL の話!？](https://qiita.com/kuni-nakaji/items/5118b23bf2ea44fed96e)
