--- a/src/pages/JavaScript/Methods/array-methods.mdx
+++ b/src/pages/JavaScript/Methods/array-methods.mdx
@@ -372,3 +372,4 @@ console.log(inventory.find(isCherries));
 - [JavaScript Array Methods](https://www.w3schools.com/js/js_array_methods.asp)
 - [MDN Array](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array)
 - [Cheatsheet for Array Methods - JavaScript 陣列方法大全](https://w3c.hexschool.com/blog/6594e4ff)
+- [【JavaScript】陣列中的 map()、filter()、reduce() 方法](https://molu.in/blog/javascript-array/)
