--- a/src/pages/Work/forbidden-tag.mdx
+++ b/src/pages/Work/forbidden-tag.mdx
@@ -1,3 +1,6 @@
 ## References
 
+- [HTML 制作テクニック](https://mainmenu.rms.rakuten.co.jp/auth/index.phtml?params=navi/beginner/html/index.html&s=&param2=0)
 - [楽天市場の禁止タグを回避しよう！ポイントを押さえたコーディング方法](https://captainec.jp/rakuten/spin_off/cording_ng)
+- [楽天広場で使えるタグ一覧](https://plaza.rakuten.co.jp/demerara/7002/)
+- [【初心者必見】楽天のページ制作でよく使う HTML と禁止タグを解説！](https://www.5springs.co.jp/blog/rakuten-html/)
