--- a/src/pages/Work/forbidden-tag.mdx
+++ b/src/pages/Work/forbidden-tag.mdx
@@ -1,3 +1,5 @@
+# 禁止タグ
+
 ## References
 
 - [HTML 制作テクニック](https://mainmenu.rms.rakuten.co.jp/auth/index.phtml?params=navi/beginner/html/index.html&s=&param2=0)
